--- a/index.html
+++ b/index.html
@@ -1,14 +1,45 @@
-<!doctype html>
+<!doctype html> 
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Leader Board Idea</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   </head>
   <body>
+    <header>
+        <div class="row d-flex justify-content-between">            
+            <div class="col-md-4 d-flex justify-content-start first">
+                    <img class="logo" src="images/icons/logo.png" alt="">
+                    <h4 class="logo-text">Idea</h4>
+            </div>
+            <div class="col-md-4 d-flex justify-content-end scnd">
+                <div class="navs">
+                        <ul class="nav d-flex justify-content-between">
+                            <li class="nav-item nav-link">
+                                <a href="">Home</a>
+                            </li>
+                            <li class="nav-item nav-link">
+                                <a href="">About</a>
+                            </li>
+                            <li class="nav-item nav-link">
+                                <a href="">Works</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href=""><img src="images/icons/profile.png" alt=""></a>
+                            </li>
+                        </ul>
+                </div>
+                <nav class="navbar navbar-dark">
+                            <span class="navbar-toggler-icon tog-bar"></span>
+                </nav>
+            </div>
+        </div>
+    </header>
+
 
 
 
