Compelted with responsive

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </div>
   </div>
 
-  <div class="container-xxl course">
+  <div class="container-md course">
     <div class="latest-course">
       <h3>Latest Course</h3>
       <div class="row d-flex justify-content-around">
